chore: use Eclipse JDT formatter to enforce a consistent code order